[gd_scene load_steps=14 format=3 uid="uid://bwufg82bvgwwu"]

[ext_resource type="Script" path="res://tree.gd" id="1_ha3jt"]
[ext_resource type="Texture2D" uid="uid://cv77pn858unrp" path="res://assets/ldjam_tree1.png" id="2_5gbys"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fvu6m"]
radius = 53.21
height = 135.26

[sub_resource type="QuadMesh" id="QuadMesh_oipee"]

[sub_resource type="QuadMesh" id="QuadMesh_7cd3t"]

[sub_resource type="Gradient" id="Gradient_k3his"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0.545098, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_4l5no"]
gradient = SubResource("Gradient_k3his")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_77tvo"]
size = Vector2(0.983799, 0.923077)

[sub_resource type="QuadMesh" id="QuadMesh_kxxve"]

[sub_resource type="Gradient" id="Gradient_we8b2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.929412, 0.87451, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_tlm4p"]
gradient = SubResource("Gradient_we8b2")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_atpo5"]
size = Vector2(0.844788, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_60wmt"]
radius = 56.41
height = 156.12

[node name="Tree" type="Node2D"]
script = ExtResource("1_ha3jt")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(5.895, -12.815)
scale = Vector2(0.425087, 0.425087)
texture = ExtResource("2_5gbys")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-2.37, 127.935)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_fvu6m")

[node name="MiniJeu" type="MeshInstance2D" parent="."]
position = Vector2(-3, -75)
scale = Vector2(254.625, 13)
mesh = SubResource("QuadMesh_oipee")
metadata/_edit_group_ = true

[node name="SuccessZone" type="MeshInstance2D" parent="MiniJeu"]
scale = Vector2(0.25, 1)
mesh = SubResource("QuadMesh_7cd3t")
texture = SubResource("GradientTexture1D_4l5no")

[node name="Area2D" type="Area2D" parent="MiniJeu/SuccessZone"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiniJeu/SuccessZone/Area2D"]
shape = SubResource("RectangleShape2D_77tvo")

[node name="Cursor" type="MeshInstance2D" parent="MiniJeu"]
position = Vector2(0.5, 0)
scale = Vector2(0.0278936, 1.84615)
mesh = SubResource("QuadMesh_kxxve")
texture = SubResource("GradientTexture1D_tlm4p")

[node name="Area2D" type="Area2D" parent="MiniJeu/Cursor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MiniJeu/Cursor/Area2D"]
shape = SubResource("RectangleShape2D_atpo5")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 131.59)
rotation = 1.5708
scale = Vector2(1.41, 1.41)
shape = SubResource("CapsuleShape2D_60wmt")

[connection signal="area_entered" from="MiniJeu/SuccessZone/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="MiniJeu/SuccessZone/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
